# PolkadotAirdropPallet

./: Cargo.toml
pallets/airdrop/: Cargo.toml
pallets/airdrop/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
