[package]
name = "pallet-airdrop"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
polkadot-sdk = { workspace = true, features = [
  "experimental",
  "runtime",
], default-features = false }
serde = { features = ["alloc"], workspace = true }
rustc-hex = { workspace = true }


[features]
default = ["std"]
std = [
  "codec/std",
  "polkadot-sdk/std",
  "scale-info/std",
  "serde/std",
  "rustc-hex/std",
]
