[package]
name = "pallet-airdrop"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-benchmarking = { workspace = true }
hex-literal = "0.4.1"
libsecp256k1 = { version = "0.7", default-features = false }
polkadot-sdk = { workspace = true, features = [
	"experimental",
	"pallet-balances",
	"runtime",
], default-features = false }
rustc-hex = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
serde = { features = ["alloc"], workspace = true }


[dev-dependencies]
hex-literal = "0.4.1"

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"libsecp256k1/std",
	"polkadot-sdk/std",
	"rustc-hex/std",
	"scale-info/std",
	"serde/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
  "polkadot-sdk/try-runtime",
]
